--- a/DesafioAula/index.html
+++ b/DesafioAula/index.html
@@ -10,7 +10,7 @@
     <aside>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <a href="#"><li>Home</li></a>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Serviços</a></li>
                 <li><a href="#">Contato</a></li>
