--- a/02 - BOX SIZE/position.html
+++ b/02 - BOX SIZE/position.html
@@ -26,6 +26,7 @@
             border: 2px solid black;
             box-sizing: border-box;
             font-family: Arial, Helvetica, sans-serif;
+            border-radius: 10px;
         }
         img{
             max-width: 100%;
